fixed schedule width on mobile hopefully (phone isn't working for testing!)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -394,6 +394,7 @@ div.panel-collapse {
  	display: table;
     height: 100%;
     width: 100%;
+    float: left;
 }
 
 .button-container {
